<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<group android:checkableBehavior="single">
    <item
        android:id="@+id/home_selection"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/bookmarked"
        app:showAsAction="never" />

    <item
        android:id="@+id/explore_selection"
        android:icon="@drawable/ic_pageview_black_24dp"

        android:title="@string/explore"
        app:showAsAction="never" />
    <item
        android:id="@+id/downloads_selection"
        android:icon="@drawable/ic_folder_black_24dp"

        android:title="@string/download"
        app:showAsAction="never" />
    <item
        android:id="@+id/log_out_selection"

        app:materialIcon="logout"
    app:materialIconColor="#FE0000"
        android:title="@string/logout"

    />

</group>
    <item android:title="@string/advanced"
        >
        <menu >
            <group android:checkableBehavior="single">


            <item
                android:id="@+id/settings_selection"
                android:icon="@drawable/ic_settings_black_24dp"

                android:title="@string/settings_selection"
                app:showAsAction="never" />

            </group>
        </menu>

    </item>


</menu>