<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp"

    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/book_content_book_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:transitionName="@string/shared_image"

            app:srcCompat="@mipmap/book_content_image_foreground" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/book_content_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="#3E3E3E"
            android:textSize="20sp"
            android:transitionName="@string/shared_title"

            android:textStyle="bold|italic" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/book_content_description_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/book_content_description_content_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="content to display"
            android:textColorLink="#3E3E3E"
            android:layout_marginBottom="7dp"
            android:textSize="18sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/book_content_author_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author"
                android:padding="5dp"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/book_content_tags_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author"
                android:padding="5dp"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nook_content_download_button"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download" />


    </LinearLayout>


</androidx.cardview.widget.CardView>